// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error states should apply correct classes to multiple types of field 1`] = `
"<form class=\\"has-error\\">
                                        <input required=\\"\\" value=\\"x\\" class=\\"has-success\\">
                                        <input required=\\"\\" value=\\"\\" class=\\"has-error\\">
                                        <input>
                                    </form>"
`;

exports[`error states should apply error after success state to field 1`] = `
"<form class=\\"has-success\\">
                                        <input required=\\"\\" value=\\"x\\" class=\\"has-success\\">
                                    </form>"
`;

exports[`error states should apply error after success state to field 2`] = `
"<form class=\\"has-error\\">
                                        <input required=\\"\\" value=\\"x\\" class=\\"has-error\\">
                                    </form>"
`;

exports[`error states should apply error class to invalid field 1`] = `
"<form class=\\"has-error\\">
                                        <input required=\\"\\" class=\\"has-error\\">
                                    </form>"
`;

exports[`error states should apply success after error state to field 1`] = `
"<form class=\\"has-error\\">
                                        <input required=\\"\\" class=\\"has-error\\">
                                    </form>"
`;

exports[`error states should apply success after error state to field 2`] = `
"<form class=\\"has-success\\">
                                        <input required=\\"\\" class=\\"has-success\\">
                                    </form>"
`;

exports[`error states should apply success class to valid field 1`] = `
"<form class=\\"has-success\\">
                                        <input required=\\"\\" value=\\"x\\" class=\\"has-success\\">
                                    </form>"
`;

exports[`error states should not apply any class to field with no validation rule 1`] = `
"<form class=\\"has-success\\">
                                        <input>
                                    </form>"
`;

exports[`error states should not apply multiple error classes to invalid field 1`] = `
"<form class=\\"has-error\\">
                                        <input required=\\"\\" class=\\"has-error\\">
                                    </form>"
`;

exports[`on submit should validate invalid form on submit 1`] = `
"<form class=\\"has-error\\">
                                        <input required=\\"\\" class=\\"has-error\\">
                                        <button type=\\"submit\\">submit</button>
                                    </form>"
`;

exports[`on submit should validate valid form on submit 1`] = `
"<form class=\\"has-success\\">
                                        <input required=\\"\\" value=\\"test\\" class=\\"has-success\\">
                                        <button type=\\"submit\\">submit</button>
                                    </form>"
`;

exports[`validation rules multiple rules should retain error class, when a field has other rules that run afterwards which are valid 1`] = `
"<form class=\\"has-error\\">
                                        <input maxlength=\\"6\\" pattern=\\"[a-zA-Z]+\\" value=\\"testFail\\" class=\\"has-error\\">
                                    </form>"
`;
